--- a/bookStore-frontEnd/src/app/app.component.html
+++ b/bookStore-frontEnd/src/app/app.component.html
@@ -6,19 +6,19 @@
   </a>
   <div class="navbar-nav me-auto">
     <li class="nav-item">
-      <a href="" class="nav-link">Admin</a>
+      <a [routerLink]="['/admin']" routerLinkActive="active" class="nav-link">Admin</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link">Home</a>
+      <a [routerLink]="['/home']" routerLinkActive="active" class="nav-link">Home</a>
     </li>
   </div>
 
   <div class="navbar-nav ms-auto">
     <li class="nav-item">
-      <a href="" class="nav-link">Login</a>
+      <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Login</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link">Register</a>
+      <a [routerLink]="['/register']" routerLinkActive="active" class="nav-link">Register</a>
     </li>
   </div>
 
