--- a/bookStore-frontEnd/src/app/error/not-found/not-found.component.html
+++ b/bookStore-frontEnd/src/app/error/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>
+<div class="container">
+  <div class="role">
+    <div class="col-md-12 text-center">
+      <span class="display-1">
+        404
+      </span>
+        Oops!!! The page you are looking for cannot be found.
+    </div>
+    <a [routerLink]="['/home']" class="btn btn-link">Home</a>
+  </div>
+</div>
