--- a/bookStore-frontEnd/src/app/error/unauthorized/unauthorized.component.html
+++ b/bookStore-frontEnd/src/app/error/unauthorized/unauthorized.component.html
@@ -1,1 +1,11 @@
-<p>unauthorized works!</p>
+<div class="container">
+  <div class="role">
+    <div class="col-md-12 text-center">
+      <span class="display-1">
+        401
+      </span>
+      You are unauthorized. Access denied
+    </div>
+    <a [routerLink]="['/home']" class="btn btn-link">Home</a>
+  </div>
+</div>
