--- a/bookStore-frontEnd/src/app/error/not-found/not-found.component.html
+++ b/bookStore-frontEnd/src/app/error/not-found/not-found.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <div class="role">
+  <div class="row">
     <div class="col-md-12 text-center">
       <span class="display-1">
         404
       </span>
+      <div class="mb-4 lead">
         Oops!!! The page you are looking for cannot be found.
     </div>
     <a [routerLink]="['/home']" class="btn btn-link">Home</a>
