--- a/bookStore-frontEnd/src/app/error/unauthorized/unauthorized.component.html
+++ b/bookStore-frontEnd/src/app/error/unauthorized/unauthorized.component.html
@@ -1,10 +1,12 @@
 <div class="container">
-  <div class="role">
+  <div class="row">
     <div class="col-md-12 text-center">
       <span class="display-1">
         401
       </span>
+      <div class="mb-4 lead">
       You are unauthorized. Access denied
+      </div>
     </div>
     <a [routerLink]="['/home']" class="btn btn-link">Home</a>
   </div>
