--- a/bookStore-frontEnd/src/app/app.component.html
+++ b/bookStore-frontEnd/src/app/app.component.html
@@ -5,7 +5,7 @@
     Book Store
   </a>
   <div class="navbar-nav me-auto">
-    <li class="nav-item">
+    <li class="nav-item" *ngIf="isAdmin()">
       <a [routerLink]="['/admin']" routerLinkActive="active" class="nav-link">Admin</a>
     </li>
     <li class="nav-item">
@@ -13,16 +13,28 @@
     </li>
   </div>
 
-  <div class="navbar-nav ms-auto">
+  <div class="navbar-nav ms-auto" *ngIf="!currentUser?.id">
     <li class="nav-item">
-      <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Login</a>
+      <a [routerLink]="['/register']" routerLinkActive="active" class="nav-link">Sign Up</a>
     </li>
-    <li class="nav-item">
-      <a [routerLink]="['/register']" routerLinkActive="active" class="nav-link">Register</a>
+    <li class="nav-item me-1">
+      <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Sign In</a>
     </li>
   </div>
 
-  <div class=""></div>
+  <div class="navbar-nav ms-auto" *ngIf="currentUser?.id">
+    <li class="nav-item">
+      <a [routerLink]="['/profile']" routerLinkActive="active" class="nav-link">
+        {{currentUser.username}}
+      </a>
+    </li>
+    <li class="nav-item me-1">
+      <a (click)="logout()" class="nav-link"
+         style="cursor: pointer;">
+        Sign Out
+      </a>
+    </li>
+  </div>
 </div>
 
 
