--- a/bookStore-frontEnd/src/app/guest/home/home.component.html
+++ b/bookStore-frontEnd/src/app/guest/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="container p-3">
+  <div class="alert alert-danger" *ngIf="errorMessage">
+    {{errorMessage}}
+  </div>
+  <div class="alert alert-success" *ngIf="infoMessage">{{infoMessage}}
+  </div>
+
+  <div class="d-flex flex-wrap">
+    <div *ngFor="let item of bookList; index as index"
+      class="card m-3"
+      style="width: 300px;
+      background-color: lavender">
+
+      <fa-icon [icon]="faBook" class="me-auto ms-auto book-icon"></fa-icon>
+
+      <div class="card-body">
+        <h5 class="card-title">{{item.title}}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{item.price | currency : "USD"}}</h6>
+        <p class="card-text">{{item.description}}</p>
+        <button class="btn w-100 mt-3" style="background-color: gold" (click)="purchase(item)">Buy</button>
+      </div>
+
+    </div>
+  </div>
+</div>
