--- a/bookStore-frontEnd/src/app/user/profile/profile.component.html
+++ b/bookStore-frontEnd/src/app/user/profile/profile.component.html
@@ -1,1 +1,29 @@
-<p>profile works!</p>
+<div class="container">
+  <div class="pt-5">
+    <div class="card">
+      <div class="card-header">
+        <h3>All Purchased Items</h3>
+      </div>
+      <div class="card-body">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Price</th>
+            <th scope="col">Date</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let item of purchaseItem; index as index">
+            <th scope="row">{{index+1}}</th>
+            <td>{{item.title}}</td>
+            <td>{{item.price | currency : "USD"}}</td>
+            <td>{{item.createTime | date : 'medium'}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
